fix eslint error that is showing on codeclimate only

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   "eslintConfig": {
     "extends": "iplayer-es6",
     "rules": {
-      "complexity": ["error", { "max": 2 }]
+      "complexity": ["error", 2]
     }
   },
   "nyc": {
