--- a/examples/package.json
+++ b/examples/package.json
@@ -19,13 +19,15 @@
   ],
   "main": "./examples.js",
   "dependencies": {
+    "ava": "^0.15.1",
     "chai-as-promised": "^5.3.0",
     "mocha": "^2.4.5",
     "tap": "^5.7.1"
   },
   "scripts": {
-    "examples": "npm run example:mocha; npm run example:tap",
+    "examples": "npm run example:ava; npm run example:mocha; npm run example:tap;",
     "example:mocha": "HUGS_LIB=mocha _mocha --ui tdd './examples.js'",
-    "example:tap": "HUGS_LIB=tap tap --reporter spec  './examples.js'"
+    "example:tap": "HUGS_LIB=tap tap --reporter spec  './examples.js'",
+    "example:ava": "HUGS_LIB=ava ava --verbose --serial './examples.js'"
   }
 }
