--- a/examples/package.json
+++ b/examples/package.json
@@ -20,7 +20,21 @@
   "main": "./examples.js",
   "dependencies": {
     "ava": "^0.15.1",
+    "babel-cli": "^6.10.1",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
     "chai-as-promised": "^5.3.0",
+    "karma": "^0.13.22",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-chai-as-promised": "^0.1.2",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
+    "karma-junit-reporter": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-spec-reporter": "0.0.26",
     "mocha": "^2.4.5",
     "tap": "^5.7.1"
   },
@@ -28,6 +42,9 @@
     "examples": "npm run example:ava; npm run example:mocha; npm run example:tap;",
     "example:mocha": "HUGS_LIB=mocha _mocha --ui tdd './examples.js'",
     "example:tap": "HUGS_LIB=tap tap --reporter spec  './examples.js'",
-    "example:ava": "HUGS_LIB=ava ava --verbose --serial './examples.js'"
+    "example:ava": "HUGS_LIB=ava ava --verbose --serial './examples.js'",
+    "example:browser": "karma start conf/karma.conf.js",
+    "example:browser:debug": "karma start conf/karma.conf.js --log-level debug --single-run false --browsers Chrome",
+    "example:browser:dev": "karma start conf/karma.conf.js --single-run false --browsers Chrome"
   }
 }
