--- a/package.json
+++ b/package.json
@@ -24,15 +24,32 @@
   },
   "devDependencies": {
     "ava": "^0.15.1",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "chai-as-promised": "^5.3.0",
     "codeclimate-test-reporter": "^0.3.1",
     "eslint": "^2.10.2",
     "eslint-config-iplayer-es6": "^2.0.0",
     "eslint-friendly-formatter": "2.0.4",
     "eslint-plugin-mocha": "^2.2.0",
+    "jasmine": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-chai-as-promised": "^0.1.2",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
+    "karma-junit-reporter": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-spec-reporter": "0.0.26",
     "mocha": "^2.4.5",
     "npm-check": "^5.2.1",
     "npm-ls-scripts": "^0.1.2",
     "nyc": "^6.4.4",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0",
     "tap": "5.7.1",
     "unroll": "1.1.0"
   },
@@ -45,6 +62,8 @@
     "help": "ls-scripts",
     "reports:coverage": "open target/coverage/index.html",
     "test": "npm run test:functional; npm run test:unit",
+    "test:browser": "karma start ./test/browsers/conf/karma.conf.js",
+    "test:browser:dev": "karma start ./test/browsers/conf/karma.conf.js --single-run false --browsers Chrome",
     "test:functional": "npm run test:functional:ava; npm run test:functional:mocha; npm run test:functional:tap;",
     "test:functional:mocha": "HUGS_LIB=mocha _mocha --async-only --ui tdd 'test/functional/tests.js'",
     "test:functional:tap": "HUGS_LIB=tap tap './test/functional/tests.js'",
@@ -76,7 +95,6 @@
     }
   },
   "eslintConfig": {
-    "extends": "iplayer-es6",
     "rules": {
       "complexity": [
         "error",
