--- a/package.json
+++ b/package.json
@@ -24,15 +24,34 @@
   },
   "devDependencies": {
     "ava": "^0.15.1",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "chai-as-promised": "^5.3.0",
     "codeclimate-test-reporter": "^0.3.1",
     "eslint": "^2.10.2",
     "eslint-config-iplayer-es6": "^2.0.0",
     "eslint-friendly-formatter": "2.0.4",
     "eslint-plugin-mocha": "^2.2.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-chai-as-promised": "^0.1.2",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-junit-reporter": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-spec-reporter": "0.0.26",
     "mocha": "^2.4.5",
+    "mochawesome": "^1.3.5",
     "npm-check": "^5.2.1",
     "npm-ls-scripts": "^0.1.2",
     "nyc": "^6.4.4",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0",
     "tap": "5.7.1",
     "unroll": "1.1.0"
   },
@@ -44,15 +63,21 @@
     "lint:fix": "eslint --fix .",
     "help": "ls-scripts",
     "reports:coverage": "open target/coverage/index.html",
-    "test": "npm run test:functional; npm run test:unit",
-    "test:functional": "npm run test:functional:ava; npm run test:functional:mocha; npm run test:functional:tap;",
+    "test": "npm run test:unit; npm run test:functional;",
+    "test:browser:run": "karma start ./test/functional/browsers/conf/karma.conf.js",
+    "test:browser": "npm run test:browser:jasmine -s; npm run test:browser:mocha -s",
+    "test:browser:debug": "karma start ./test/functional/browsers/conf/karma.conf.js  --log-level debug --single-run false --browsers Chrome",
+    "test:browser:dev": "karma start ./test/functional/browsers/conf/karma.conf.js --single-run false --autowatch --browsers Chrome",
+    "test:browser:jasmine": "HUGS_TEST_LIB=jasmine npm run test:browser:run -s",
+    "test:browser:mocha": "HUGS_TEST_LIB=mocha npm run test:browser:run -s",
+    "test:functional": "npm run test:functional:ava -sß; npm run test:functional:mocha -s; npm run test:functional:tap -s; npm run test:browser -s",
     "test:functional:mocha": "HUGS_LIB=mocha _mocha --async-only --ui tdd 'test/functional/tests.js'",
     "test:functional:tap": "HUGS_LIB=tap tap './test/functional/tests.js'",
     "test:functional:ava": "HUGS_LIB=ava ava --verbose --serial './test/functional/tests.js'",
     "test:report": "nyc report --reporter=html",
     "test:unit:coverage": "nyc --reporter=lcov --reporter=text npm run test:unit; npm run test:report",
     "test:unit:coverage:cc": "npm run test:unit:coverage; codeclimate-test-reporter < target/coverage/lcov.info",
-    "test:unit": "_mocha --ui tdd './test/unit/**/*.js'"
+    "test:unit": "_mocha --ui tdd --reporter mochawesome --reporter-options reportDir=./target/test-reports/unit,reportName=index,inlineAssets=false './test/unit/**/*.js'"
   },
   "config": {
     "scripts": {
@@ -64,6 +89,11 @@
       "help": "List available npm run commands",
       "reports:coverage": "Open coverage report in default browser",
       "test": "Run tests",
+      "test:browser": "Run browser examples using jasmine and mocha",
+      "test:browser:mocha": "Run browser examples using mocha",
+      "test:browser:jasmine": "Run browser examples using jasmine",
+      "test:browser:debug": "Run browser example in karma debug mode. use HUGS_TEST_LIB=mocha|jasmine to specify test lib to use",
+      "test:browser:dev": "Run browser example in karma dev mode. use HUGS_TEST_LIB=mocha|jasmine to specify test lib to use",
       "test:functional": "Run all functional tests",
       "test:functional:mocha": "Run functional tests using mocha as the test runner",
       "test:functional:tap": "Run functional tests using tap as the test runner",
@@ -75,7 +105,6 @@
     }
   },
   "eslintConfig": {
-    "extends": "iplayer-es6",
     "rules": {
       "complexity": [
         "error",
