--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: node_js
 node_js:
   - "4"
-script: npm run test:unit:coverage:cc
+script:
+  - npm run test:unit:coverage:cc
+  - npm run test:functional:ava
+  - npm run test:functional:mocha
+  - npm run test:functional:tap
