--- a/examples/package.json
+++ b/examples/package.json
@@ -20,17 +20,18 @@
   ],
   "main": "./examples.js",
   "dependencies": {
-    "ava": "^0.15.1",
+    "ava": "^0.16.0",
     "babel-cli": "^6.10.1",
     "babel-polyfill": "^6.9.1",
-    "chai-as-promised": "^5.3.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "5.3.0",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
+    "karma": "^1.3.0",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
     "karma-chai-sinon": "^0.1.5",
-    "karma-chrome-launcher": "^1.0.1",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-junit-reporter": "^1.0.0",
@@ -38,11 +39,13 @@
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-spec-reporter": "0.0.26",
     "npm-ls-scripts": "^0.1.2",
-    "mocha": "^2.4.5",
-    "tap": "^5.7.1"
+    "mocha": "^3.1.2",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0",
+    "tap": "8.0.0"
   },
   "scripts": {
-    "examples": "npm run example:ava; npm run example:mocha; npm run example:tap;",
+    "examples": "npm run example:ava; npm run example:mocha; npm run example:tap; npm run example:browser",
     "example:ava": "HUGS_LIB=ava ava --verbose --serial './examples.js'",
     "example:mocha": "HUGS_LIB=mocha _mocha --ui tdd './examples.js'",
     "example:tap": "HUGS_LIB=tap tap --reporter spec  './examples.js'",
@@ -64,7 +67,8 @@
       "example:browser:mocha": "Run browser examples using mocha",
       "example:browser:jasmine": "Run browser examples using jasmine",
       "example:browser:debug": "Run browser example in karma debug mode. use HUGS_TEST_LIB=mocha|jasmine to specify test lib to use",
-      "example:browser:dev": "Run browser example in karma dev mode. use HUGS_TEST_LIB=mocha|jasmine to specify test lib to use"
+      "example:browser:dev": "Run browser example in karma dev mode. use HUGS_TEST_LIB=mocha|jasmine to specify test lib to use",
+      "examples": "Run all examples"
     }
   }
 }
