--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ava": "^0.16.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
-    "chai-as-promised": "^6.0.0",
+    "chai-as-promised": "5.3.0",
     "codeclimate-test-reporter": "^0.4.0",
     "eslint": "^3.9.0",
     "eslint-config-iplayer-es6": "^3.1.0",
@@ -70,7 +70,7 @@
     "test:browser:dev": "karma start ./test/functional/browsers/conf/karma.conf.js --single-run false --autowatch --browsers Chrome",
     "test:browser:jasmine": "HUGS_TEST_LIB=jasmine npm run test:browser:run -s",
     "test:browser:mocha": "HUGS_TEST_LIB=mocha npm run test:browser:run -s",
-    "test:functional": "npm run test:functional:ava -sß; npm run test:functional:mocha -s; npm run test:functional:tap -s; npm run test:browser -s",
+    "test:functional": "npm run test:functional:ava -s; npm run test:functional:mocha -s; npm run test:functional:tap -s; npm run test:browser -s",
     "test:functional:mocha": "HUGS_LIB=mocha _mocha --async-only --ui tdd 'test/functional/tests.js'",
     "test:functional:tap": "HUGS_LIB=tap tap './test/functional/tests.js'",
     "test:functional:ava": "HUGS_LIB=ava ava --verbose --serial './test/functional/tests.js'",
@@ -117,8 +117,14 @@
     "check-coverage": true,
     "report-dir": "./target/coverage",
     "exclude": [
+      "node_modules",
       "src/targets/ava.js",
       "test/**/*.js"
+    ]
+  },
+  "greenkeeper": {
+    "ignore": [
+      "chai-as-promised"
     ]
   }
 }
