--- a/package.json
+++ b/package.json
@@ -109,6 +109,14 @@
       "complexity": [
         "error",
         3
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "consistent-return": [
+        "error",
+        {}
       ]
     }
   },
