updated dependencies and removed unneeded ones

--- a/examples/package.json
+++ b/examples/package.json
@@ -20,7 +20,7 @@
   ],
   "main": "./examples.js",
   "dependencies": {
-    "ava": "^0.16.0",
+    "ava": "^0.17.0",
     "babel-cli": "^6.10.1",
     "babel-polyfill": "^6.9.1",
     "chai": "^3.5.0",
@@ -30,13 +30,13 @@
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
-    "karma-chai-sinon": "^0.1.5",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-junit-reporter": "^1.0.0",
     "karma-mocha": "^1.0.1",
     "karma-phantomjs-launcher": "^1.0.1",
+    "karma-sinon": "^1.0.5",
     "karma-spec-reporter": "0.0.26",
     "npm-ls-scripts": "^0.1.2",
     "mocha": "^3.1.2",
