--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type": "git",
     "url": "git://github.com/lawrencec/hugs"
   },
+  "directories": {
+    "test": "test/"
+  },
   "keywords": [
     "tdd",
     "bdd",
@@ -19,30 +22,30 @@
     "tap"
   ],
   "dependencies": {
-    "chai": "^3.5.0",
+    "karma-sinon": "^1.0.5",
     "sinon": "^1.17.4"
   },
   "devDependencies": {
     "ava": "^0.17.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
-    "chai-as-promised": "5.3.0",
     "codeclimate-test-reporter": "^0.4.0",
     "eslint": "^3.9.0",
     "eslint-config-iplayer-es6": "^3.1.0",
     "eslint-friendly-formatter": "2.0.6",
     "eslint-plugin-mocha": "^4.7.0",
+    "intelli-espower-loader": "^1.0.1",
     "jasmine-core": "^2.4.1",
     "karma": "^1.3.0",
     "karma-babel-preprocessor": "^6.0.1",
-    "karma-chai": "^0.1.0",
-    "karma-chai-as-promised": "^0.1.2",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.0.0",
+    "karma-espower-preprocessor": "^1.1.0",
     "karma-jasmine": "^1.0.2",
     "karma-junit-reporter": "^1.0.0",
     "karma-mocha": "^1.0.1",
     "karma-phantomjs-launcher": "^1.0.1",
+    "karma-power-assert": "0.0.4",
     "karma-sinon": "^1.0.5",
     "karma-spec-reporter": "0.0.26",
     "mocha": "^3.1.2",
@@ -50,7 +53,7 @@
     "npm-check": "^5.2.1",
     "npm-ls-scripts": "^0.1.2",
     "nyc": "^8.3.2",
-    "sinon-chai": "^2.8.0",
+    "power-assert": "^1.4.2",
     "tap": "8.0.1",
     "unroll": "1.2.0"
   },
@@ -76,7 +79,7 @@
     "test:report": "nyc report --reporter=html",
     "test:unit:coverage": "nyc --reporter=lcov --reporter=text npm run test:unit; npm run test:report",
     "test:unit:coverage:cc": "npm run test:unit:coverage; codeclimate-test-reporter < target/coverage/lcov.info",
-    "test:unit": "_mocha --ui tdd --reporter mochawesome --reporter-options reportDir=./target/test-reports/unit,reportName=index,inlineAssets=false './test/unit/**/*.js'"
+    "test:unit": "_mocha --ui tdd --require intelli-espower-loader --reporter mochawesome --reporter-options reportDir=./target/test-reports/unit,reportName=index,inlineAssets=false './test/unit/**/*.js'"
   },
   "config": {
     "scripts": {
@@ -130,8 +133,6 @@
     ]
   },
   "greenkeeper": {
-    "ignore": [
-      "chai-as-promised"
-    ]
+    "ignore": []
   }
 }
