--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
     "tap"
   ],
   "dependencies": {
-    "sinon": "^1.17.4"
+    "sinon": "^4.5.0"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
+    "ava": "^0.25.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "codeclimate-test-reporter": "^0.4.0",
-    "eslint": "^3.9.0",
+    "eslint": "^4.19.1",
     "eslint-config-iplayer-es6": "^3.1.0",
-    "eslint-friendly-formatter": "2.0.6",
+    "eslint-friendly-formatter": "^4.0.0",
     "eslint-plugin-mocha": "^4.7.0",
     "intelli-espower-loader": "^1.0.1",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.3.0",
-    "karma-babel-preprocessor": "^6.0.1",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.0",
+    "karma-babel-preprocessor": "^7.0.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.0.0",
     "karma-espower-preprocessor": "^1.1.0",
@@ -44,17 +44,18 @@
     "karma-junit-reporter": "^1.0.0",
     "karma-mocha": "^1.0.1",
     "karma-phantomjs-launcher": "^1.0.1",
-    "karma-power-assert": "0.0.4",
+    "karma-power-assert": "^1.0.0",
     "karma-sinon": "^1.0.5",
-    "karma-spec-reporter": "0.0.26",
-    "mocha": "^3.1.2",
-    "mochawesome": "^1.3.5",
+    "karma-spec-reporter": "0.0.32",
+    "mocha": "^5.0.5",
+    "mochawesome": "^3.0.2",
     "npm-check": "^5.2.1",
     "npm-ls-scripts": "^0.1.2",
-    "nyc": "^8.3.2",
+    "nyc": "^11.6.0",
     "power-assert": "^1.4.2",
-    "tap": "8.0.1",
-    "unroll": "1.2.0"
+    "sinon": "^4.5.0",
+    "tap": "^11.1.3",
+    "unroll": "^1.5.0"
   },
   "scripts": {
     "dep-check": "npm-check",
@@ -133,5 +134,8 @@
   },
   "greenkeeper": {
     "ignore": []
+  },
+  "ava": {
+    "failWithoutAssertions": false
   }
 }
